--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dims",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Language for evaluating dimensions in feet and inches.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
