--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Jeremy Fairbank",
   "license": "MIT",
   "repository": {
-    "type": "git"
+    "type": "git",
     "url": "https://github.com/jfairbank/dims"
   },
   "devDependencies": {
